konst/tests/misc_tests/type_eq_ui_tests/no_from_type_parameter_err.stderr
error: expected function parameter to be `T`, found: ``
 --> tests/misc_tests/type_eq_ui_tests/no_from_type_parameter_err.rs:3:1
  |
3 | / type_eq_projection_fn!{
4 | |     ///
5 | |     fn project_option() -> Option<T>
6 | | }
  | |_^
  |
  = note: this error originates in the macro `$crate::__mpf_assert_type_param_is_T` which comes from the expansion of the macro `type_eq_projection_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a `T` type parameter in the return type
  --> tests/misc_tests/type_eq_ui_tests/no_from_type_parameter_err.rs:8:1
   |
8  | / type_eq_projection_fn!{
9  | |     ///
10 | |     fn project_option(T) -> Option<U>
11 | | }
   | |_^
   |
   = note: this error originates in the macro `$crate::__assert_replaced_type_param_and_where_clause` which comes from the expansion of the macro `type_eq_projection_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a `T` type parameter in the return type
  --> tests/misc_tests/type_eq_ui_tests/no_from_type_parameter_err.rs:13:1
   |
13 | / type_eq_projection_fn!{
14 | |     ///
15 | |     fn project_ref(T) -> Ref<'a, U>
16 | | }
   | |_^
   |
   = note: this error originates in the macro `$crate::__assert_replaced_type_param_and_where_clause` which comes from the expansion of the macro `type_eq_projection_fn` (in Nightly builds, run with -Z macro-backtrace for more info)
